--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <div class="points" ></div>
     <div class="messages"></div>
     <div class="time"></div>
+
+
+    <div class="modal start-modal">
+
+        <button>Start!</button>
+
+
+    </div>
+    <div class = "modal end-modal">
+        <h4>Gra zakonczona! Twój wynik to:</h4>
+        <h4 class="score"></h4>
+        <button>Restart!</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
